--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "recharts": "^2.12.7",
     "survey-core": "^1.10.6",
